# projeto_fabric_antt

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: README.md
data/bronze/acidentes/: demostrativo_acidentes_aco.csv  demostrativo_acidentes_aps.csv  demostrativo_acidentes_ecoponte.csv  demostrativo_acidentes_ecoriominas.csv  demostrativo_acidentes_ecosul.csv  demostrativo_acidentes_ecoviasaraguaia.csv  demostrativo_acidentes_epr_iguacu.csv  demostrativo_acidentes_nova_381.csv  demostrativo_acidentes_pantanal.csv  demostrativo_acidentes_prvias.csv  demostrativo_acidentes_rota-verde-goias.csv  demostrativo_acidentes_trans.csv  demostrativo_acidentes_viaaraucaria.csv  demostrativo_acidentes_viabrasil.csv  demostrativo_acidentes_viamineira.csv  demostrativo_acidentes_viasul.csv  demostrativo_acidentes_way_262.csv
html/: Carrossel Fabric.dc.html  carrossel_standalone.html
lakehouse_antt/: README.md
lakehouse_antt/Files/bronze/acidentes/: demostrativo_acidentes_eco050.csv  demostrativo_acidentes_ecoviasdocerrado.csv  demostrativo_acidentes_elovias.csv  (+3 more)
modelo_semantico/: README.md  pbix_antt.pbix
notebooks/: 00_nb_config.ipynb  00_nb_helpers.ipynb  01_nb_ingestao_bronze_acidentes.ipynb  02_nb_bronze_to_silver.ipynb  03_nb_gold_dims.ipynb  04_nb_gold_fato_acidente.ipynb  05_nb_gold_fato_veiculos.ipynb  06_nb_gold_fato_vitimas.ipynb
pipelines/: README.md
src/: helpers.py  pipeline_local.py  transformations.py
tests/: conftest.py  test_mapear_concessionaria.py  test_transformar.py
(+6 files in other folders)
